completed the UI part

--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,42 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="mainBody">
+        <div class="display">
+            <p class="output"></p>
+        </div>
+        <div class="buttons">
+            <div class="row1">
+                <button id="Ac">AC</button>
+                <button id="c">C</button>
+                <button id="per">%</button>
+                <button class="large" id="divide">/</button>
+            </div>
+            <div class="row2">
+                <button id="seven">7</button>
+                <button id="eight">8</button>
+                <button id="nine">9</button>
+                <button class="large" id="multiply">*</button>
+            </div>
+            <div class="row3">
+                <button id="four">4</button>
+                <button id="five">5</button>
+                <button id="six">6</button>
+                <button class="large" id="subtract">-</button>
+            </div>
+            <div class="row4">
+                <button id="one">1</button>
+                <button id="two">2</button>
+                <button id="three">3</button>
+                <button class="large" id="add">+</button>
+            </div>
+            <div class="row5">
+                <button id="zero" style="width: 50%;">0</button>
+                <button id="decimal">.</button>
+                <button class="large" id="equal">=</button>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
