Added the script.js file

--- a/index.htm
+++ b/index.htm
@@ -14,36 +14,36 @@
         </div>
         <div class="buttons">
             <div class="row1">
-                <button id="Ac">AC</button>
-                <button id="c">C</button>
-                <button id="per">%</button>
-                <button class="large" id="divide">/</button>
+                <button class="button" id="Ac">AC</button>
+                <button  class="button" id="c">C</button>
+                <button class="button" id="per">%</button>
+                <button class="button" class="large" id="divide">/</button>
             </div>
             <div class="row2">
-                <button id="seven">7</button>
-                <button id="eight">8</button>
-                <button id="nine">9</button>
-                <button class="large" id="multiply">*</button>
+                <button class="button" id="seven">7</button>
+                <button class="button" id="eight">8</button>
+                <button class="button" id="nine">9</button>
+                <button class="button" class="large" id="multiply">*</button>
             </div>
             <div class="row3">
-                <button id="four">4</button>
-                <button id="five">5</button>
-                <button id="six">6</button>
-                <button class="large" id="subtract">-</button>
+                <button class="button" id="four">4</button>
+                <button class="button" id="five">5</button>
+                <button class="button" id="six">6</button>
+                <button class="button" class="large" id="subtract">-</button>
             </div>
             <div class="row4">
-                <button id="one">1</button>
-                <button id="two">2</button>
-                <button id="three">3</button>
-                <button class="large" id="add">+</button>
+                <button class="button" id="one">1</button>
+                <button class="button" id="two">2</button>
+                <button class="button" id="three">3</button>
+                <button class="button" class="large" id="add">+</button>
             </div>
             <div class="row5">
-                <button id="zero" style="width: 50%;">0</button>
-                <button id="decimal">.</button>
-                <button class="large" id="equal">=</button>
+                <button class="button" id="zero" style="width: 50%;">0</button>
+                <button class="button" id="decimal">.</button>
+                <button class="button" class="large" id="equal">=</button>
             </div>
         </div>
     </div>
-    
+    <script src="script.js"></script>
 </body>
 </html>
